--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -73,11 +73,10 @@
     "__name__: h5rdmtoolbox-tuturial-convention\n",
     "__institution__: https://orcid.org/members/001G000001e5aUTIAY\n",
     "__contact__: https://orcid.org/0000-0001-8729-0482\n",
-    "__use_scale_offset__: False\n",
     "\n",
     "data_type:\n",
     "  description: 'Type of data in file. Can be numerical or experimental'\n",
-    "  target_methods: __init__\n",
+    "  target_method: __init__\n",
     "  validator:\n",
     "    $in:\n",
     "    - experimental\n",
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2e3d59ca-8de0-4821-bdb7-27a99b259b8d",
    "metadata": {},
    "outputs": [
@@ -105,10 +104,10 @@
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
        "    * \u001b[1mdata_type\u001b[0m:\n",
-       "\t\tType of data in file. Can be numerical or experimental"
+       "\t\tType of data in file. Can be numerical or experimental."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "8dfd1a89-ba4d-4333-bed4-dbd9dae8fadd",
    "metadata": {},
    "outputs": [
@@ -138,7 +137,7 @@
        "using(\"h5rdmtoolbox-tuturial-convention\")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "bc760582-760d-45dc-ae88-8346d3cfb387",
    "metadata": {},
    "outputs": [
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "105511eb-f632-471a-b53c-7945440da8f4",
    "metadata": {},
    "outputs": [
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "0669ccff-9563-4a0c-ab66-e07224f8d42b",
    "metadata": {},
    "outputs": [
@@ -427,8 +426,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5560237500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5560237500\">\n",
+       "                        <input id=\"group-ds--43992523200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--43992523200\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -461,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "599c91e0-fded-4cf7-9706-d5dbf1eddb65",
    "metadata": {},
    "outputs": [],
@@ -481,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "a709898e-5bac-4773-8dac-500210c962ba",
    "metadata": {},
    "outputs": [
@@ -492,10 +491,10 @@
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
        "    * \u001b[3mdata_type\u001b[0m (default=None):\n",
-       "\t\tType of data in file. Can be numerical or experimental"
+       "\t\tType of data in file. Can be numerical or experimental."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "cdfebdc5-3cd1-41c6-a370-ae1b884d9960",
    "metadata": {},
    "outputs": [
@@ -717,8 +716,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--5605502000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--5605502000\">\n",
+       "                        <input id=\"group-ds--45444047200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--45444047200\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -744,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "79efb889-ff4c-4b8e-99a9-782d3bd4a4f5",
    "metadata": {},
    "outputs": [
@@ -766,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "73415654-05b1-4d85-a8f5-51398fdd7b93",
    "metadata": {},
    "outputs": [],
@@ -791,17 +790,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "b37888a9-c963-420a-b40b-45495212721b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$pintquantity', '$pintunit', '$ref', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
+       "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$quantity', '$units', '$ref', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,57 +823,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "0641aa3c-152f-4f78-81b3-c6ddf4e9e531",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\u001b[1mConvention(\"h5rdmtoolbox-tuturial-convention\")\u001b[0m\n",
-       "contact: https://orcid.org/0000-0001-8729-0482\n",
-       "  File.__init__():\n",
-       "    * \u001b[1mdata_type\u001b[0m:\n",
-       "\t\tType of data in file. Can be numerical or experimental\n",
-       "    * \u001b[1mcontact\u001b[0m:\n",
-       "\t\tContact or responsible person represented by an ORCID-ID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001D438ECF070>):\n",
-       "\t\tThe standard name table of the convention.\n",
-       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
-       "\t\tA comment to further describe the data.\n",
-       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources servering as references for the data\n",
-       "  Group.create_dataset():\n",
-       "    * \u001b[1munits\u001b[0m:\n",
-       "\t\tPhysical unit of the dataset.\n",
-       "    * \u001b[1mstandard_name\u001b[0m:\n",
-       "\t\tStandard name of the dataset. If not set, the long_name attribute must be given.\n",
-       "    * \u001b[1mlong_name\u001b[0m:\n",
-       "\t\tAn comprehensive description of the dataset. If not set, the standard_name attribute must be given.\n",
-       "    * \u001b[3mscale\u001b[0m (default=None):\n",
-       "\t\tScale factor for the dataset values.\n",
-       "    * \u001b[3moffset\u001b[0m (default=None):\n",
-       "\t\tScale factor for the dataset values.\n",
-       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
-       "\t\tA comment to further describe the data.\n",
-       "    * \u001b[3mcontact\u001b[0m (default=None):\n",
-       "\t\tContact or responsible person represented by an ORCID-ID.\n",
-       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources servering as references for the data\n",
-       "  Group.create_group():\n",
-       "    * \u001b[3mcomment\u001b[0m (default=None):\n",
-       "\t\tA comment to further describe the data.\n",
-       "    * \u001b[3mcontact\u001b[0m (default=None):\n",
-       "\t\tContact or responsible person represented by an ORCID-ID.\n",
-       "    * \u001b[3mreferences\u001b[0m (default=None):\n",
-       "\t\tWeb resources servering as references for the data"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "No record found for DOI: 10.5281/zenodo.8281285",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cv \u001b[38;5;241m=\u001b[39m \u001b[43mh5tbx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconventions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_zenodo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoi\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8281285\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m cv\n",
+      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\core.py:431\u001b[0m, in \u001b[0;36mfrom_zenodo\u001b[1;34m(doi, name, register)\u001b[0m\n\u001b[0;32m    429\u001b[0m     filename \u001b[38;5;241m=\u001b[39m UserDir[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcache\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m/\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoi\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;250m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    430\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mexists():\n\u001b[1;32m--> 431\u001b[0m     record \u001b[38;5;241m=\u001b[39m \u001b[43mzsearch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch_doi\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoi\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    432\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    433\u001b[0m         matches \u001b[38;5;241m=\u001b[39m [file \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m record\u001b[38;5;241m.\u001b[39mfiles \u001b[38;5;28;01mif\u001b[39;00m file[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124myaml\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[1;32m~\\Anaconda3\\envs\\h5tbx\\lib\\site-packages\\zenodo_search\\zsearch.py:147\u001b[0m, in \u001b[0;36msearch_doi\u001b[1;34m(doi)\u001b[0m\n\u001b[0;32m    145\u001b[0m r \u001b[38;5;241m=\u001b[39m search(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdoi:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    146\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(r) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m--> 147\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo record found for DOI: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdoi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    148\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(r) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m    149\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m r[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mValueError\u001b[0m: No record found for DOI: 10.5281/zenodo.8281285"
+     ]
     }
    ],
    "source": [
@@ -894,61 +860,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "bff929ab-d133-48bd-8c16-b7bd3080a426",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<PositionalStdAttr(\"standard_name\"): \"Standard name of the dataset. If not set, the long_name attribute must be given.\">"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cv.properties[h5tbx.Dataset]['standard_name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7f2295ae-7b1f-431f-8168-cf340b80adc2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no convention: \n",
-      "\n",
-      "Parameters for \"__init__\":\n",
-      "  - name\n",
-      "  - mode\n",
-      "  - layout\n",
-      "  - attrs\n",
-      "  - kwargs\n",
-      "\n",
-      "------------\n",
-      "with convention h5rdmtoolbox-tuturial-convention: (standard attributes are made bold)\n",
-      "\n",
-      "Parameters for \"__init__\":\n",
-      "  - name\n",
-      "  - mode\n",
-      "  - layout\n",
-      "  - attrs\n",
-      "  - \u001b[1mdata_type\u001b[0m\n",
-      "  - \u001b[1mstandard_name_table\u001b[0m\n",
-      "  - \u001b[1mcomment\u001b[0m\n",
-      "  - \u001b[1mcontact\u001b[0m\n",
-      "  - \u001b[1mreferences\u001b[0m\n",
-      "  - kwargs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import inspect\n",
     "\n",
@@ -974,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a0b03b0c-8d48-46d3-8c0e-98d5dc758650",
    "metadata": {},
    "outputs": [
@@ -984,7 +909,7 @@
        "using(\"h5py\")"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
