--- a/docs/conventions/standard_name_convention.ipynb
+++ b/docs/conventions/standard_name_convention.ipynb
@@ -12,8 +12,14 @@
     " - `standard_name`: A human- and machine-readable standardized name (identifier) of a dataset based on construction rules and documented in a \"Standard name table\",\n",
     " - `standard_name_table`: List of `standard_name` together with the base unit (SI) and a comprehensive description. It also includes additional information about how a `standard_name` can be transformed into a new `standard_name`\n",
     " - `units`: The unit attribute of a dataset. Must not be SI-unit, but must be convertible to it and then match the registered SI-unit in the Standard name table,\n",
-    " - `long_name`: An alternative name if no `standard_name` is applicable.\n",
-    "\n",
+    " - `long_name`: An alternative name if no `standard_name` is applicable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c8617b6-48de-4065-84b9-022a3b0dff7b",
+   "metadata": {},
+   "source": [
     "## Concept and its implications\n",
     "The concept behind it is quite simple:\n",
     "- The standard name is a human-readable (of course) and interpretable identifier of the dataset. This means, the content of the dataset can be interpreted by the standard_name alone.\n",
@@ -113,8 +119,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_wind6022650300\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_wind6022650300\">\n",
+       "        <input id=\"group-x_wind6091677600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind6091677600\">\n",
        "        x_wind</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
@@ -325,7 +331,7 @@
    "id": "00ee187b-daa9-4d76-a9b1-0a5eaa164ae5",
    "metadata": {},
    "source": [
-    "#### Transformation of base standard names\n",
+    "### Transformation of base standard names\n",
     "Not all allowed standard names must be included in the table. There are some so-called transformations of the listed ones. \n",
     "There are two ways to transform a standard name.\n",
     "\n",
@@ -338,7 +344,7 @@
    "id": "2bae1cdb-e1f0-44fc-bc8e-8252299f759f",
    "metadata": {},
    "source": [
-    "#### 1. Addig affixes\n",
+    "#### 1. Adding affixes\n",
     "\n",
     "Note, that 'x_velocity' is not part of the table:"
    ]
@@ -443,8 +449,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity6180557700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6180557700\">\n",
+       "        <input id=\"group-x_velocity6244176100\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6244176100\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -485,8 +491,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate6198333500\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate6198333500\">\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate6262318700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate6262318700\">\n",
        "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector. Coordinate refers to the spatial coordinate. Coordinate is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -517,8 +523,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-square_of_static_pressure6222083600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6222083600\">\n",
+       "        <input id=\"group-square_of_static_pressure6274985700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6274985700\">\n",
        "        square_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -549,8 +555,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-arithmetic_mean_of_static_pressure6235392600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6235392600\">\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure6287522900\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6287522900\">\n",
        "        arithmetic_mean_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
@@ -592,19 +598,17 @@
        "\u001b[1mConvention(\"standard name convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001B4E9FC3340>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000018A020F88B0>):\n",
        "\t\tThe standard name table of the convention.\n",
        "  Group.create_dataset():\n",
        "    * \u001b[1munits\u001b[0m:\n",
-       "\t\tPhysical unit of the dataset.\n",
+       "\t\tThe physical unit of the dataset. If dimensionless, the unit is ''.\n",
        "    * \u001b[1mstandard_name\u001b[0m:\n",
        "\t\tStandard name of the dataset. If not set, the long_name attribute must be given.\n",
        "    * \u001b[1mlong_name\u001b[0m:\n",
        "\t\tAn comprehensive description of the dataset. If not set, the standard_name attribute must be given.\n",
-       "    * \u001b[3mscale\u001b[0m (default=None):\n",
-       "\t\tScale factor for the dataset values.\n",
-       "    * \u001b[3moffset\u001b[0m (default=None):\n",
-       "\t\tScale factor for the dataset values.\n",
+       "    * \u001b[3mreferencesdataset\u001b[0m (default=None):\n",
+       "\t\tWeb resources servering as references for the dataset.\n",
        "  Group.create_group(): (\u001b[3mNothing registered\u001b[0m)"
       ]
      },
@@ -614,7 +618,7 @@
     }
    ],
    "source": [
-    "zenodo_cv = h5tbx.conventions.from_zenodo(doi=8281285)\n",
+    "zenodo_cv = h5tbx.conventions.from_zenodo('https://zenodo.org/record/8301535')\n",
     "sn_cv = zenodo_cv.pop('contact', 'comment', 'references', 'data_type')\n",
     "sn_cv.name = 'standard name convention'\n",
     "sn_cv.register()\n",
@@ -712,8 +716,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity6328187600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6328187600\">\n",
+       "        <input id=\"group-x_velocity6377504600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6377504600\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -743,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "9de466f1-a31c-4067-91a4-6562d1389ceb",
    "metadata": {},
    "outputs": [
@@ -953,27 +957,19 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--48639946300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--48639946300\">\n",
+       "                        <input id=\"group-ds--6417495300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--6417495300\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-48640559900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-48640562500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-48640562500\">u</label>\n",
+       "                <ul id=\"ds-1-/u-6420501000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-6420503800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-6420503800\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "    <li>\n",
-       "        <input id=\"group-x_velocity48641615600\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity48641615600\">\n",
-       "        x_velocity</label>\n",
-       "        <ul class=\"h5tb-attr-list\">\n",
-       "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
-       "    </ul>\n",
-       "</ul></li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -993,14 +989,6 @@
     "    h5.create_dataset('u', data=[1,2,3], standard_name='x_velocity', units='km/s')\n",
     "    h5.dump()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4f2c820-7365-40ac-99d6-c18aa2d9ddc6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
