--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -19,7 +19,7 @@
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox.conventions.core.use at 0x1fd538426d0>"
+       "using(\"h5py\")"
       ]
      },
      "execution_count": 1,
