--- a/docs/conventions/introduction_to_validators.ipynb
+++ b/docs/conventions/introduction_to_validators.ipynb
@@ -42,9 +42,9 @@
        " '$type': h5rdmtoolbox.conventions.validators.TypeValidator,\n",
        " '$in': h5rdmtoolbox.conventions.validators.InValidator,\n",
        " '$orcid': h5rdmtoolbox.conventions.validators.ORCIDValidator,\n",
-       " '$pintquantity': h5rdmtoolbox.conventions.validators.PintQuantityValidator,\n",
-       " '$pintunit': h5rdmtoolbox.conventions.validators.PintUnitsValidator,\n",
-       " '$reference': h5rdmtoolbox.conventions.validators.ReferencesValidator,\n",
+       " '$quantity': h5rdmtoolbox.conventions.validators.PintQuantityValidator,\n",
+       " '$units': h5rdmtoolbox.conventions.validators.PintUnitsValidator,\n",
+       " '$ref': h5rdmtoolbox.conventions.validators.ReferencesValidator,\n",
        " '$url': h5rdmtoolbox.conventions.validators.URLValidator,\n",
        " '$bibtex': h5rdmtoolbox.conventions.validators.BibTeXValidator,\n",
        " '$minlength': h5rdmtoolbox.conventions.validators.MinLengthValidator,\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ce05a804-00e9-45d8-bb38-ee7621713254",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "d7af39e2-df47-4145-954d-b36b2f757ec9",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "<RegexValidator \"$regex\" ref=\"^v\\d+(\\.\\d+)?(a|b|rc|dev)?$\">"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "ac2e5b94-9715-416f-9147-ddf423e70d9a",
    "metadata": {},
    "outputs": [
@@ -136,13 +136,13 @@
    "source": [
     "try:\n",
     "    rv('test')\n",
-    "except h5tbx.errors.ValidatorError as e:\n",
+    "except h5tbx.errors.StandardAttributeValidationError as e:\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "1ac2f21d-7f4b-4213-8bbc-0e33c41f0340",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "'v1.0'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,14 +160,6 @@
    "source": [
     "rv('v1.0')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bac81a5-f4e0-490b-887a-6d0346ab9943",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
