--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "d9e2c157-bd96-47e0-9602-76c79ffbe989",
    "metadata": {
     "tags": []
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a7257533-784f-4f48-94cb-d8de107ad62c",
    "metadata": {
     "tags": []
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e236705c-928f-4eb0-b1ed-9c283ade86ff",
    "metadata": {
     "tags": []
@@ -102,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"/\"].dataset(name=\"...\", compression=gzip)\n"
+      "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b297ff59-e2fa-4c3f-a101-63bb7ecff2a9",
    "metadata": {
     "tags": []
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "87c4cff7-a27c-4334-bc3d-bfafd92c7d89",
    "metadata": {
     "tags": []
@@ -162,7 +162,7 @@
        "AttributeValidation(Equal('title')=Any(opt=True), Equal('user')=Any(opt=True) in GroupValidation(ExistIn('/'))>)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "11d140af-a740-4d45-96a4-397aa59bd0e7",
    "metadata": {
     "tags": []
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e667ce2d-5eec-4821-b60c-cc4cdff94913",
    "metadata": {
     "tags": []
@@ -218,7 +218,7 @@
        "GroupValidation(ExistIn('measurement_devices'))>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "6e4f5575-4c82-4f40-a295-79ed091c3c52",
    "metadata": {
     "tags": []
@@ -251,9 +251,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
+      "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n",
       "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
-      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.5.1a1')\"])\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.8rc1')\"])\n",
       "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
       "GroupValidation(ExistIn('devices'))>\n"
      ]
@@ -264,7 +264,7 @@
        "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "aed5d184-3d7e-4063-8fd0-484627ba751a",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "b9902245-3120-4579-9643-cc58bea22bf8",
    "metadata": {
     "tags": []
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"/\"].dataset(name=\"...\", compression=gzip)\n"
+      "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "d2c8c8df-5a41-408b-98b2-77f77aec5ac9",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "9471245e-c34e-4752-b66e-dc8bcfffe93d",
    "metadata": {
     "tags": []
@@ -383,7 +383,7 @@
        "DatasetValidation(Regex('^[x-z]_coordinate'))>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a04e4b68-c604-46d5-ac63-8902a9d77d61",
    "metadata": {
     "tags": []
@@ -616,12 +616,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--53201732600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--53201732600\">\n",
+       "                        <input id=\"group-ds--5538279200\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5538279200\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.5.1a1</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "bf51d18c-cb84-4e9b-ac5e-590bf3b0c0c3",
    "metadata": {
     "tags": []
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "bdf32a53-289b-4c86-b085-adbea6ab2892",
    "metadata": {
     "tags": []
@@ -676,7 +676,7 @@
        "6"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "1f2143ab-cbad-499f-8068-080e59ebec74",
    "metadata": {
     "tags": []
@@ -715,7 +715,7 @@
        "6"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "620139b4-2a91-48b1-84dc-4ff0b0fe67fc",
    "metadata": {
     "tags": []
@@ -738,15 +738,15 @@
     {
      "data": {
       "text/plain": [
-       "[ValidationResult(\u001b[91mds validation \"...\" failed for /\u001b[0m),\n",
-       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [Equal('comment')]\u001b[0m),\n",
+       "[ValidationResult(\u001b[91mds validation \"Equal(Validator Equal has not yet been called or no message has been set!)\" failed for /\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('comment')=Regex('^[^ 0-9].*')\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91mds validation \"re:^[x-z]_coordinate\" failed for /\u001b[0m),\n",
-       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [Equal('__version__')]\u001b[0m),\n",
-       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [Equal('title'), Equal('user')]\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('__version__')=Equal('0.8rc1')\"]\u001b[0m),\n",
+       " ValidationResult(\u001b[91m\"/\" is missing required attributes: [\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"]\u001b[0m),\n",
        " ValidationResult(\u001b[91m\"devices\" does not exist in \"/\"\u001b[0m)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "49a0ed8f-e8e0-446a-bf55-73e05652b2f6",
    "metadata": {
     "tags": []
@@ -775,13 +775,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
+      "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n",
       "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
-      "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
-      "[\"/\"].dataset(name=\"...\", compression=gzip)\n",
+      "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=Equal(Validator Equal has not yet been called or no message has been set!))\n",
+      "[\"/\"].dataset(name=\"Equal(Validator Equal has not yet been called or no message has been set!)\", compression=Equal(Validator Equal has not yet been called or no message has been set!))\n",
       "[\"/...\"].attr([\"Equal('comment')=Regex('^[^ 0-9].*')\"])\n",
-      "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=1)\n",
-      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.5.1a1')\"])\n",
+      "[\"/\"].dataset(name=\"re:^[x-z]_coordinate\", ndim=Equal(Validator Equal has not yet been called or no message has been set!))\n",
+      "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('__version__')=Equal('0.8rc1')\"])\n",
       "[\"/ExistIn(\"/\" exists in \"/\")\"].attr([\"Equal('title')=Any(opt=True)\", \"Equal('user')=Any(opt=True)\"])\n",
       "GroupValidation(ExistIn('devices'))>\n"
      ]
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "73e710a5-79a5-4528-964f-b40b4fed3b09",
    "metadata": {
     "tags": []
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "ec658204-c29b-4026-a42c-0f825febf5f8",
    "metadata": {
     "tags": []
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "17cb367f-e2fd-485f-9a81-d7f52fdb486e",
    "metadata": {
     "tags": []
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "26d459cf-97c8-410a-a739-27eb933a9971",
    "metadata": {
     "tags": []
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "c17da1cb-821b-4187-85ab-2ea58b0d13d4",
    "metadata": {
     "tags": []
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "644b6996-4b19-445a-af89-1ad10cb947c1",
    "metadata": {
     "tags": []
@@ -943,7 +943,7 @@
        "LayoutRegistry(\"tbx\",)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "f2da66a6-5276-4c78-8b69-27a7b0bed612",
    "metadata": {
     "tags": []
@@ -966,9 +966,9 @@
      "text": [
       "Layout Validation report\n",
       "------------------------\n",
-      "Number of validations (called/specified): 5/6\n",
+      "Number of validations (called/specified): 6/7\n",
       "Number of inactive validations: 1\n",
-      "Success rate: 100.0% (n_fails=0)\n"
+      "Success rate: 80.0% (n_fails=1)\n"
      ]
     }
    ],
